Google analytics + referencement

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+     <meta name="description" content="Allison Bricknell George's online portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Allison Bricknell George</title>
@@ -67,6 +68,7 @@
 
 <div class="spacer"> 
 </div>
+<div class="spacer"> </div>
 
 
 <!--<div class="container text-center">
@@ -103,8 +105,8 @@
  </div> -->
 <div id="resume"> 
    <h1> </h1>
-   <img src="images/Experiences.svg" >
-   <img src="images/Education.svg" >
+   <img src="images/Experiences.svg" alt="experiences">
+   <img src="images/Education.svg" alt="education">
 </div>
 
 
@@ -149,5 +151,15 @@
 </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-76978739-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
   </body>
 </html>
