--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Allison Bricknell George's online portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Allison Bricknell George</title>
@@ -53,27 +54,27 @@
 
 <div id="projects"> 
    <div>
-   <img src="images/remaide-03.svg" >
+   <img src="images/remaide-03.svg" alt="remaide" >
 </div>
 <div class="spacer"> 
 </div>
 <div>
-<img src="images/airplay2-05.svg" >
+<img src="images/airplay2-05.svg" alt="airplay">
 </div>
 <div class="spacer"> 
 </div>
 <div>
-<img src="images/summer-06.svg" >
+<img src="images/summer-06.svg" alt="summer-fountain">
 </div>
 <div class="spacer"> 
 </div>
 <div>
-<img src="images/staub-08.svg" >
+<img src="images/staub-08.svg" alt="staub">
 </div>
 <div class="spacer"> 
 </div>
 <div>
-<img src="images/liv-07.svg" >
+<img src="images/liv-07.svg" alt="liv-lamp">
 </div>
 </div>
 <div class="spacer"> </div>
@@ -117,5 +118,15 @@
 </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-76978739-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
   </body>
 </html>
